# sequence_viewer

./: .gitattributes  .gitignore  2612822235_genomic.sqx  4638_C12.fasta  4638_C12.sqx  KPC_varyantlar.fasta  KPC_varyantlar.sqx  README.md  add_path.py  carp_pla.fasta  f.py  git_Bash.txt  haemophilus_influenzae.fasta  haemophilus_influenzae.sqx  main.py  pyproject.toml  sequenceileAnnotation arasındaki mesafeler.txt  t.py  taq_polmerase_seq_WT.fasta  taq_polymerase_seq_Mut-G59W-V155I-L245M-E507K-F749I.fasta  users
.claude/: settings.json  settings.local.json
benchmarks/: io_cpp_pack_bench.cpp  io_python_pack_bench.py
data/: default_settings.json  display_settings.json  mouse_bindings.json
development/: annotation_devtool.py  nucleotide_devtool.py  theme_devtool.py
dialogs/: __init__.py  display_settings_dialog.py
docs/: native_io_backend.md  native_job_protocol.md  sequence_workspace_api.md
file_io/: __init__.py
graphics/: __init__.py  header_item.py  sequence_item.py
i18n/: __init__.py  locale_manager.py
model/: alignment_data_model.py  alignment_metadata.py  annotation.py  annotation_store.py  consensus_calculator.py  motif_finder.py  row_selection_model.py  sequence_data_model.py  sequence_record.py  undo_stack.py
native_tools/: fasta_to_sqx.cpp
navigation_ruler_model/: navigation_ruler_model.py  navigation_ruler_widget.py
position_ruler/: position_ruler_model.py  position_ruler_widget.py
repositories/: base_repository.py  database_repository.py  file_based_repository.py  repository_factory.py
sequence_viewer/: __init__.py  __main__.py  (+1 more)
(+259 files in other folders)
